flux/kube-system/kube-dns/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: kube-dns
spec:
  endpointSelector:
    matchLabels:
      app: kube-dns
  ingress:
  - icmps:
    - fields:
      - type: EchoRequest
        family: IPv4
      - type: EchoReply
        family: IPv4
      - type: EchoRequest
        family: IPv6
      - type: EchoReply
        family: IPv6
  - fromEntities:
    - cluster
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  - fromEndpoints:
    - matchLabels:
        app: prometheus
    toPorts:
    - ports:
      - port: "9153"
        protocol: TCP
  egress: []
